// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list-field can mount collapsed list field 1`] = `
<div id="app">
    <div class="SharpList">
        <!---->
        <div>
            <div>
                <div class="SharpList__item SharpList__item--collapsed">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div><span> Antoine </span></div>
                        </div>
                    </div>
                    <!---->
                </div>
            </div>
            <!---->
        </div>
        <!---->
    </div>
</div>
`;

exports[`list-field can mount empty list field 1`] = `
<div id="app">
    <div class="SharpList">
        <!---->
        <div>
            <div></div><button type="button" class="SharpButton SharpButton--secondary SharpList__add-button">Ajouter un élément</button></div>
        <!---->
    </div>
</div>
`;

exports[`list-field can mount filled list field 1`] = `
<div id="app">
    <div class="SharpList">
        <!---->
        <div>
            <div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
            </div><button type="button" class="SharpButton SharpButton--secondary SharpList__add-button">Ajouter un élément</button></div>
        <!---->
    </div>
</div>
`;

exports[`list-field can mount non addable, non removable, non sortable list field 1`] = `
<div id="app">
    <div class="SharpList">
        <!---->
        <div>
            <div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
            </div>
            <!---->
        </div>
        <!---->
    </div>
</div>
`;

exports[`list-field can mount with full list 1`] = `
<div id="app">
    <div class="SharpList">
        <!---->
        <div>
            <div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
                <div class="SharpList__item">
                    <div class="SharpModule__inner">
                        <div class="SharpModule__content">
                            <div class="SharpGrid">
                                <div class="row">
                                    <div class="col-md">
                                        <div class="SharpFieldContainer SharpForm__form-item"><label class="SharpForm__label" style="display: none;">
         <!----></label>
                                            <!----><input type="text" class="SharpText">
                                            <div class="SharpForm__form-requirement"></div> <small class="SharpForm__help-message"></small></div>
                                    </div>
                                </div>
                            </div>
                            <!---->
                        </div>
                    </div>
                    <!---->
                </div>
            </div>
            <!---->
        </div>
        <!---->
    </div>
</div>
`;
